sm/sm-b2b-connector/main/default/objects/B2B_Payment_Gateway_Setting__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>