sm/sm-b2b-connector/main/default/objects/B2B_Payment_Gateway_Setting__mdt/fields/WebStore__c.field-meta.xml
<CustomField>
    <fullName>WebStore__c</fullName>
    <label>WebStore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>